--- a/TipOff/Gemfile
+++ b/TipOff/Gemfile
@@ -29,6 +29,9 @@ gem 'bcrypt', '~> 3.1.7'
 # Zurb
 gem 'foundation-rails'
 
+# HTTParty
+gem 'httparty'
+
 # Use Unicorn as the app server
 # gem 'unicorn'
 
