--- a/TipOff/Gemfile
+++ b/TipOff/Gemfile
@@ -24,11 +24,7 @@ gem 'jbuilder', '~> 2.0'
 gem 'sdoc', '~> 0.4.0', group: :doc
 
 # Use ActiveModel has_secure_password
-gem 'bcrypt', '~> 3.1.7'
-
-# Zurb
-gem 'foundation-rails'
-
+# gem 'bcrypt', '~> 3.1.7'
 # HTTParty
 gem 'httparty'
 
@@ -37,6 +33,7 @@ gem 'httparty'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
+
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
