--- a/tipOff/Gemfile
+++ b/tipOff/Gemfile
@@ -31,6 +31,8 @@ gem 'twitter-bootstrap-rails'
 gem 'httparty'
 # Vuejs
 gem 'vuejs-rails'
+# stubhub
+gem 'stubhub'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
