added heroku rails gem 12factor

--- a/tipOff/Gemfile
+++ b/tipOff/Gemfile
@@ -34,7 +34,8 @@ gem 'vuejs-rails'
 
 # nokogiri
 gem 'nokogiri'
-
+ #for heroku
+gem 'rails_12factor', group: :production
 # Use Unicorn as the app server
 # gem 'unicorn'
 
